--- a/src/Styles/styles.module.css
+++ b/src/Styles/styles.module.css
@@ -22,6 +22,7 @@ nav ul li:hover > [data-navbar-group] {
 .navBar__listItem {
     padding-top: .5rem;
     box-sizing: border-box;
+    white-space: break-spaces;
     outline: none;
     height: 100%;
 }
@@ -63,6 +64,7 @@ nav ul li:hover > [data-navbar-group] {
     box-sizing: border-box;
     display: inline-table;
     font-size: 1rem;
+    width: 100%;
 }
 
 .navBar__link {
