--- a/src/Styles/styles.module.css
+++ b/src/Styles/styles.module.css
@@ -2,8 +2,9 @@
 
 :root {
     --primary-color: rgb(240, 238, 238);
-    --secondary-color: lightcoral;
-
+    --secondary-color: rgb(255, 190, 190);
+    --hover-color: black;
+    --contrast-color: white;
     --firstListItemPadding: 1.5rem;
 }
 
@@ -16,15 +17,53 @@
 nav ul li:hover > [data-navbar-group] {
     display: block !important;
     animation-name: expand;
-    animation-duration: 2s;
+    animation-duration: .5s;
 }
 
 .navBar__listItem {
-    padding-top: .5rem;
+    padding: .5rem 16px;
     box-sizing: border-box;
-    white-space: break-spaces;
+    white-space: pre-wrap;
     outline: none;
     height: 100%;
+    text-align: start;
+    position: relative;
+}
+
+.navBar__listItem:hover {
+    background-color: var(--hover-color);
+    color: var(--contrast-color);
+}
+
+.navBar__listItem:hover::before {
+    border-left: 2px solid var(--contrast-color);
+    border-bottom: 2px solid var(--contrast-color);
+}
+
+.navBar__listItem:hover::after {
+    border-right: 2px solid var(--contrast-color);
+    border-top: 2px solid var(--contrast-color);
+}
+
+[data-navbar-back]::before {
+    content: '';
+    width: 12px;
+    height: 12px;
+    border-left: 1px solid var(--hover-color);
+    border-bottom: 1px solid var(--hover-color);
+    display: inline-block;
+    transform: rotateZ(45deg);
+}
+
+[data-navbar-partof]::after {
+    content: '';
+    width: 10px;
+    margin-left: 1.2rem;
+    height: 10px;
+    border-right: 1px solid var(--hover-color);
+    border-top: 1px solid var(--hover-color);
+    display: inline-block;
+    transform: rotateZ(45deg);
 }
 
 .navBar__listItem_firstLevel {
@@ -32,6 +71,7 @@ nav ul li:hover > [data-navbar-group] {
     font-size: 1.2rem;
     outline: none;
     flex: 1;
+    position: relative;
     text-align: center;
 }
 
@@ -40,8 +80,29 @@ nav ul li:hover > [data-navbar-group] {
     background-color: var(--secondary-color);
 }
 
+[data-navbar-hasgroup] > span::after {
+    content: '';
+    width: 15px;
+    margin-left: 1.2rem;
+    margin-top: .5rem;
+    height: 15px;
+    border-right: 1px solid var(--hover-color);
+    border-top: 1px solid var(--hover-color);
+    display: inline-block;
+    transform: rotateZ(-45deg);
+    transition: transform .5s;
+    top: 40%;
+}
+
+[data-navbar-hasgroup]:hover > span::after {
+    transform: rotateZ(135deg);
+    border-right: 1px solid var(--hover-color);
+    border-top: 1px solid var(--hover-color);
+}
+
 .navBar__firstLevelList {
     background-color: var(--primary-color);
+    box-shadow: 0px -9px 0px 0px var(--secondary-color);
     list-style: none;
     padding: 0;
     margin-right: 16px;
@@ -74,15 +135,16 @@ nav ul li:hover > [data-navbar-group] {
 }
 
 .navBar__groupList {
-    padding: 16px;
+    padding: 16px 0;
     white-space: nowrap;
-    border: 1px solid black;
     overflow: hidden;
     opacity: 1;
     width: 250px;
     transition: all .5s;
+    background-color: var(--primary-color);
     position: absolute;
     visibility: hidden;
+    box-shadow: -20px 4px 0px 4px var(--secondary-color);
     margin-top: var(--firstListItemPadding);
 }
 
@@ -104,7 +166,10 @@ nav ul li:hover > [data-navbar-group] {
     .navBar__groupList {
         position: relative;
         margin: 1rem auto 0 auto;
-        
+        box-shadow: 0 0 0px 8px var(--primary-color);
+        border-left: 3px solid var(--secondary-color);
+        border-top: 3px solid var(--secondary-color);
+        background-color: var(--primary-color);
     }
 
     .navBar__listItem_firstLevel {
